k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accountbalancecalculation
  labels:
    name: accountbalancecalculation
    environment: production
